# cdparanoia.rs

./: .gitignore  Cargo.toml  README.md
cdparanoia/: Cargo.toml
cdparanoia-sys/: Cargo.toml  build.rs  wrapper.h
cdparanoia-sys/src/: lib.rs
cdparanoia/examples/: rip_track.rs
cdparanoia/src/: lib.rs
