[package]
name = "cdparanoia"
version = "0.1.0"
authors = ["Adam Gausmann <adam@gaussian.dev>"]
edition = "2021"
description = "Safe bindings for libcdparanoia"
readme = "../README.md"
homepage = "https://sr.ht/~agausmann/cdparanoia.rs"
repository = "https://git.sr.ht/~agausmann/cdparanoia.rs"
license = "BSD-2-Clause"
keywords = ["rip", "cd", "cdparanoia"]
categories = ["api-bindings", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
cdparanoia-sys = { version = "0.1.0", path = "../cdparanoia-sys" }
displaydoc = "0.2.4"
libc = "0.2.147" 

[dev-dependencies]
anyhow = "1.0.71"
hound = "3.5.0"
